More spacing! More readability! MORE! (Also, fixed some stray fonts that I had missed earlier.)

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ ul{
 figcaption {
      font-family: 'Roboto Condensed', 'Arial Narrow', Arial, Helvetica, sans-serif;
 }
+h3 {
+     font-family: 'Open Sans', 'Microsoft YaHei Light', Arial, Helvetica, sans-serif;
+     font-weight: 400;
+}
  
 /******************************************
 /* LAYOUT
@@ -150,7 +154,7 @@ aside a:hover{
           display: flex;
           flex-direction: column;
           justify-content: center;
-          line-height: 1.3;
+          line-height: 1.6;
      }
      footer > aside{
           display: flex;
